--- a/src/app/gardenMaintenence/gardenChange.html
+++ b/src/app/gardenMaintenence/gardenChange.html
@@ -1,9 +1,8 @@
-<script src="assets/js/jquery.screwdefaultbuttonsV2.min.js"></script>
 <section class="mainheader">
   <div class="container">
     <div class="row">
       <div class="logo inside col-md-12">
-        <a href="/"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
+        <a href="index.html"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
       </div>
     </div>
   </div>
@@ -26,23 +25,12 @@
     <div class="row">
       <!-- <div class="post-title col-md-12"><h3>Gartenunterhalt</h3></div>				 -->
       <form class="form-gardenmaintenance">
-        <div class="form-group" ng-repeat="list in vm.lists track by $index">
+        <div class="form-group">
           <div class="post-icons col-md-1">
-            <input type="radio" name="maintenance"  radio-beautify="vm.selection" id="maintenance" value="{{list.id}}"   ng-model="vm.selection">
+            <input type="radio"  name="maintenance" id="maintenance" value="" >
           </div>
           <div class="col-md-10">
-            <textarea name="maintenancedetails" id="maintenancedetails" class="form-control" disabled="disabled">{{list.firstname + ' ' + list.lastname + ',' + list.address}}</textarea>
-          </div>
-          <div class="post-icons col-md-1">
-            <img src="assets/images/icon-edit.png" alt="" class="img-responsive" ng-click="vm.editor(list.id)">
-          </div>
-        </div>
-        <!-- <div class="form-group">
-          <div class="post-icons col-md-1">
-            <input type="radio" name="maintenance" id="" value="" >
-          </div>
-          <div class="col-md-10">
-            <textarea name="maintenancedetails" id="" class="form-control"></textarea>
+            <textarea name="maintenancedetails" id="maintenancedetails" class="form-control" >Patrick Epler, Dortmund 03/14/2016, Zuständigkeit.</textarea>
           </div>
           <div class="post-icons col-md-1">
             <img src="assets/images/icon-edit.png" alt="" class="img-responsive">
@@ -80,9 +68,9 @@
           <div class="post-icons col-md-1">
             <img src="assets/images/icon-edit.png" alt="" class="img-responsive">
           </div>
-        </div> -->
-        <!-- <div class="form-group"> -->
-          <!-- <div class="post-icons col-md-1">
+        </div>
+        <div class="form-group">
+          <div class="post-icons col-md-1">
             <input type="radio" name="maintenance" id="" value="" >
           </div>
           <div class="col-md-10">
@@ -91,7 +79,18 @@
           <div class="post-icons col-md-1">
             <img src="assets/images/icon-edit.png" alt="" class="img-responsive">
           </div>
-        </div> -->
+        </div>
+        <div class="form-group">
+          <div class="post-icons col-md-1">
+            <input type="radio" name="maintenance" id="" value="" >
+          </div>
+          <div class="col-md-10">
+            <textarea name="maintenancedetails" id="" class="form-control"></textarea>
+          </div>
+          <div class="post-icons col-md-1">
+            <img src="assets/images/icon-edit.png" alt="" class="img-responsive">
+          </div>
+        </div>
         <div class="btn-holder form-group">
           <a href="new-project.html"><i class="fa fa-plus-circle fa-3x"></i></a>
         </div>
@@ -100,3 +99,14 @@
   </div>
 </div>
 </section>
+<script src="assets/js/jquery.screwdefaultbuttonsV2.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$('input:radio').screwDefaultButtons({
+				image: 'url("assets/images/radio-2.png")',
+				width: 32,
+				height: 33
+			});
+
+		});
+	</script>
