--- a/src/app/components/topHeader/top.html
+++ b/src/app/components/topHeader/top.html
@@ -2,7 +2,20 @@
   <div class="container">
     <div class="row">
       <div class="logo inside col-md-12">
-        <a href="/"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
+        <a onClick="window.history.go(-2); return false;"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="nav">
+  <div class="container">
+    <div class="row">
+      <div class="menu col-md-12">
+        <ul>
+          <li class="col-md-4"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4 title"><strong>Gartenunterhalt</strong></li>
+          <li class="col-md-4"><a href="erledigte.html">Erledigte</a></li>
+        </ul>
       </div>
     </div>
   </div>
