--- a/src/app/gardenMaintenence/gardenMaintenence.html
+++ b/src/app/gardenMaintenence/gardenMaintenence.html
@@ -12,8 +12,9 @@
     <div class="row">
       <div class="menu col-md-12">
         <ul>
-          <li class="col-md-4"><a href="index.html"><i class="fa fa-angle-left"></i> Zurück</a></li>
-          <li class="col-md-4 title"><strong>Gartenunterhalt</strong></li>
+          <li class="col-md-4"><a onClick="window.history.go(-1); return false;"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4 title" ng-if="vm.state=='gartenunterhalt'"><strong>Gartenunterhalt</strong></li>
+          <li class="col-md-4 title" ng-if="vm.state=='gartenumaenderung'"><strong>Gartenumänderung</strong></li>
           <li class="col-md-4"><a href="erledigte.html">Erledigte</a></li>
         </ul>
       </div>
@@ -28,16 +29,17 @@
       </div>
     </div>
     <div class="row">
+      <!-- <input type="checkbox" ng-model="selection"     radio-beautify id="maintenance" value="test"> -->
       <!-- <div class="post-title col-md-12"><h3>Gartenunterhalt</h3></div>				 -->
       <form class="form-gardenmaintenance">
-        <div class="form-group" ng-repeat="list in vm.lists track by $index">
-          <div class="post-icons col-md-1">
-            <input type="radio" name="maintenance"  radio-beautify="vm.selection" id="maintenance" value="{{list.id}}"   ng-model="vm.selection">
+        <div class="form-group" ng-repeat="list in vm.lists track by $index" infinite-scroll="vm.getList()" infinite-scroll-disabled="vm.disableScroll" infinite-scroll-distance="3">
+          <div class="post-icons col-md-1 col-sm-1 col-xs-2">
+            <input type="checkbox" ng-model="selection" ng-checked="list.status==1"   radio-beautify="list" data="vm.lists" id="maintenance" value="{{list}}">
           </div>
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-10 col-xs-8">
             <textarea name="maintenancedetails" id="maintenancedetails" class="form-control" disabled="disabled">{{list.firstname + ' ' + list.lastname + ',' + list.address}}</textarea>
           </div>
-          <div class="post-icons col-md-1">
+          <div class="post-icons col-md-1 col-sm-1 col-xs-2">
             <img src="assets/images/icon-edit.png" alt="" class="img-responsive" ng-click="vm.editor(list.id)">
           </div>
         </div>
@@ -96,13 +98,23 @@
             <img src="assets/images/icon-edit.png" alt="" class="img-responsive">
           </div>
         </div> -->
-        <div class="btn-holder form-group">
-          <a href="new-project.html"><i class="fa fa-plus-circle fa-3x"></i></a>
+        <div class="btn-holder form-group" ng-if="!vm.loading">
+          <a ng-click="vm.addGarden()"><i class="fa fa-plus-circle fa-3x"></i></a>
         </div>
 
       </form>
 
     </div>
+    <div class="row" ng-if="vm.Infiniteloading">
+      <div layout="row" layout-sm="column" layout-align="space-around">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      </div>
+    </div>
   </div>
 </div>
 </section>
+<style >
+  .toastClass{
+    background-color: green;
+  }
+</style>
