--- a/src/app/reminder/reminder.html
+++ b/src/app/reminder/reminder.html
@@ -22,49 +22,23 @@
 </section>
 <section class="form">
   <div class="container">
+    <div class="row" ng-if="remind.loading">
+      <div layout="row" layout-sm="column" layout-align="space-around">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      </div>
+    </div>
     <div class="row">
       <!-- <div class="post-title col-md-12"><h3>Gartenunterhalt</h3></div>				 -->
       <form class="form-erinnerung">
-        <div class="form-group">
+        <div class="form-group" ng-repeat="list in remind.lists track by $index" infinite-scroll="remind.getList()"  infinite-scroll-distance="3">
           <div class="post-icons col-md-1 col-sm-1 col-xs-2">
-            <input type="radio" name="maintenance" id="maintenance" value="" >
+            <input type="checkbox" radio-check="list" ng-checked="list.status==1" data="remind.lists" name="maintenance" id="maintenance" value="{{list}}" >
           </div>
           <div class="col-md-10 col-sm-11 col-xs-10">
-            <input type="text" text="" placeholder="Erinnerung" class="form-control">
+            <input type="text" text="" placeholder="Erinnerung" ng-model="list.title" class="form-control">
           </div>
         </div>
-        <div class="form-group">
-          <div class="post-icons col-md-1 col-sm-1 col-xs-2">
-            <input type="radio" name="maintenance" id="maintenance" value="" >
-          </div>
-          <div class="col-md-10 col-sm-11 col-xs-10">
-            <input type="text" text="" placeholder="Erinnerung" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="post-icons col-md-1 col-sm-1 col-xs-2">
-            <input type="radio" name="maintenance" id="maintenance" value="" >
-          </div>
-          <div class="col-md-10 col-sm-11 col-xs-10">
-            <input type="text" text="" placeholder="Erinnerung" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="post-icons col-md-1 col-sm-1 col-xs-2">
-            <input type="radio" name="maintenance" id="maintenance" value="" >
-          </div>
-          <div class="col-md-10 col-sm-11 col-xs-10">
-            <input type="text" text="" placeholder="Erinnerung" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="post-icons col-md-1 col-sm-1 col-xs-2">
-            <input type="radio" name="maintenance" id="maintenance" value="" >
-          </div>
-          <div class="col-md-10 col-sm-11 col-xs-10">
-            <input type="text" text="" placeholder="Erinnerung" class="form-control">
-          </div>
-        </div>
+
 
         <div class="btn-holder form-group">
           <button type="button" class="btn btn-modal" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus-circle fa-3x"></i></button>
@@ -75,7 +49,7 @@
 </div>
 </section>
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" my-modal close="remind.modalclose" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
@@ -83,13 +57,19 @@
       <h4 class="modal-title" id="myModalLabel">Neue Erinnerungen</h4>
     </div>
     <div class="modal-body">
-      <form action="">
-        <input type="text" text="" class="form-control" placeholder="Titel">
+      <form name="postForm"  novalidate="">
+
+        <input type="text" name="text" ng-model="newText" text="" class="form-control" placeholder="Titel" required>
+        <div class="text-warning" ng-if="postForm.$submitted && postForm.text.$invalid">
+          <p ng-if="postForm.text.$error.required">
+            Please enter text
+          </p>
+        </div>
       </form>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-cancel" data-dismiss="modal">Abbrechen</button>
-      <button type="button" class="btn btn-save">Speichern</button>
+      <button type="button" ng-click="remind.submit(newText)" class="btn btn-save">Speichern</button>
     </div>
   </div>
 </div>
