--- a/src/app/done/done.html
+++ b/src/app/done/done.html
@@ -34,11 +34,16 @@
 </section>
 <section class="form white-bg">
   <div class="container">
-    <div class="row">
+    <div class="row" ng-if="done.loading">
+      <div layout="row" layout-sm="column" layout-align="space-around">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      </div>
+    </div>
+    <div class="row" ng-if="!done.loading">
 
       <form class="form-gardenmaintenance">
         <div ng-repeat="list in done.lists" >
-        <div class="post-title col-md-12"><h3>{{list.year}}</h3></div>
+        <div class="post-title col-md-12" ng-if="list.projects.length > 0"><h3>{{list.year}}</h3></div>
         <div class="form-group" ng-repeat="l in list.projects">
           <div class="post-icons col-md-1 col-sm-2 col-xs-2">
             <input type="checkbox" ng-checked="l.status==1"   radio-beautify="l" data="list.projects" name="maintenance" id="maintenance" value="{{l}}" >
