--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -11,7 +11,7 @@
 					<ul class="row">
 						<li class="col-md-4"><a class="btn btn-home" ng-click="main.trigger('gartenunterhalt')">Gartenunterhalt</a></li>
 						<li class="col-md-4"><a class="btn btn-home" ng-click="main.trigger('gartenumaenderung')">Gartenumänderung</a></li>
-						<li class="col-md-4"><a class="btn btn-home" href="/reminder">Erinnerung</a></li>
+						<li class="col-md-4"><a class="btn btn-home" ng-click="main.goToReminder()">Erinnerung</a></li>
 					</ul>
 				</div>
 			</div>
