--- a/src/app/edit/edit.html
+++ b/src/app/edit/edit.html
@@ -14,7 +14,7 @@
         <ul>
           <li class="col-md-4"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
           <li class="col-md-4 title"><strong>{{edit.header}}</strong></li>
-          <li class="col-md-4"><a href="erledigte.html">Erledigte</a></li>
+          <li class="col-md-4"><a href="/reminder">Erledigte</a></li>
         </ul>
       </div>
     </div>
