--- a/src/app/done/done.html
+++ b/src/app/done/done.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="logo inside col-md-12">
-        <a href="index.html"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
+        <a href="/"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
       <form action="" class="form-inline form-search col-md-offset-1 col-md-10 col-sm-12 col-xs-12">
         <div class="form-group">
           <input ng-model="searchTerm" type="text" class="form-control" id="" placeholder="Suche" ng-change="done.search(searchTerm)">
-          <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+          <button style="top:0px" type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
         </div>
       </form>
     </div>
@@ -34,9 +34,10 @@
 </section>
 <section class="form white-bg">
   <div class="container">
-    <div class="row" ng-if="done.loading">
-      <div layout="row" layout-sm="column" layout-align="space-around">
-        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+    <div class="row" ng-if="done.loading" >
+      <div class="col-md-12" style="text-align:center;">
+        <i class="fa fa-circle-o-notch fa-spin fa-3x">
+        </i>
       </div>
     </div>
     <div class="row" ng-if="!done.loading">
