--- a/src/app/edit/edit.html
+++ b/src/app/edit/edit.html
@@ -12,9 +12,9 @@
     <div class="row">
       <div class="menu col-md-12">
         <ul>
-          <li class="col-md-4"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
           <li class="col-md-4 title"><strong>{{edit.header}}</strong></li>
-          <li class="col-md-4"><a ng-click="edit.goDone()">Erledigte</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a ng-click="edit.goDone()">Erledigte</a></li>
         </ul>
       </div>
     </div>
@@ -27,26 +27,24 @@
 					<div class="form-group">
 						<div class="col-md-4" >
 							<label for="">Name</label>
-							<input type="text" name="lastName" class="form-control" ng-model="edit.profile.lastname" placeholder="Name" required ng-minlength="3" ng-maxlength="20">
-							<span class="text-danger" ng-if="postForm.lastName.$invalid && postForm.$submitted">
+							<input type="text" name="lastName" class="form-control" ng-model="edit.profile.lastname" placeholder="Name" required  ng-maxlength="20">
+							<span class="text-danger" ng-if="postForm.lastName.$invalid && postForm.lastName.$dirty">
 								<p ng-if="postForm.lastName.$error.required">{{edit.lang.enter_name}}</p>
-								<p ng-if="postForm.lastName.$error.minlength">{{edit.lang.less_character}}</p>
-								<p ng-if="postForm.lastName.$error.minlength">{{edit.lang.more_character}}</p>
+								<p ng-if="postForm.lastName.$error.maxlength">{{edit.lang.more_character}}</p>
 							</span>
 						</div>
 						<div class="col-md-4">
 							<label for="">Vorname</label>
-							<input type="text" name="firstName" class="form-control" id="" ng-model="edit.profile.firstname" placeholder="Vorname" required ng-minlength="3" ng-maxlength="20">
-							<span class="text-danger" ng-if="postForm.firstName.$invalid && postForm.$submitted">
+							<input type="text" name="firstName" class="form-control" id="" ng-model="edit.profile.firstname" placeholder="Vorname" required  ng-maxlength="20">
+							<span class="text-danger" ng-if="postForm.firstName.$invalid && postForm.firstName.$dirty">
 								<p ng-if="postForm.firstName.$error.required">{{edit.lang.enter_first}}</p>
-								<p ng-if="postForm.firstName.$error.minlength">{{edit.lang.less_character}}</p>
-								<p ng-if="postForm.firstName.$error.minlength">{{edit.lang.more_character}}</p>
+								<p ng-if="postForm.firstName.$error.maxlength">{{edit.lang.more_character}}</p>
 							</span>
 						</div>
 						<div class="col-md-4">
 							<label for="">Adresse</label>
 							<input type="text" class="form-control" name="address" required id="" ng-model="edit.profile.address" placeholder="Adresse">
-							<span class="text-danger" ng-if="postForm.address.$invalid && postForm.$submitted">
+							<span class="text-danger" ng-if="postForm.address.$invalid && postForm.address.$dirty">
 								<p ng-if="postForm.address.$error.required">{{edit.lang.enter_address}}</p>
 							</span>
 						</div>
@@ -55,7 +53,7 @@
 						<div class="col-md-4">
 							<label for="">Postleitzahl</label>
 							<input type="text" ng-model="edit.profile.postal_code" required name="postal_code" ng-pattern="/^\d+$/" class="form-control" id="" placeholder="Postleitzahl">
-							<span class="text-danger" ng-if="postForm.postal_code.$invalid && postForm.$submitted">
+							<span class="text-danger" ng-if="postForm.postal_code.$invalid && postForm.postal_code.$dirty">
 								<p ng-if="postForm.postal_code.$error.pattern">{{edit.lang.invalid_postal}}</p>
 								<p ng-if="postForm.postal_code.$error.required">{{edit.lang.enter_postal}}</p>
 							</span>
@@ -63,14 +61,14 @@
 						<div class="col-md-4">
 							<label for="">Ort</label>
 							<input type="text" name="place" class="form-control" ng-model="edit.profile.place" id="" placeholder="Ort" ng-maxlength="20">
-							<span class="text-danger" ng-if="postForm.place.$invalid && postForm.$submitted">
+							<span class="text-danger" ng-if="postForm.place.$invalid && postForm.place.$dirty">
 								<p ng-if="postForm.place.$error.maxlength">{{edit.lang.more_character}}</p>
 							</span>
 						</div>
 						<div class="col-md-4">
 							<label for="">Telefon <img src="assets/images/icon-phone.png"></label>
 							<input type="text" name="telephone" class="form-control"  required id="" ng-model="edit.profile.phone" placeholder="Telefon">
-							<span class="text-danger" ng-if="postForm.telephone.$invalid && postForm.$submitted">
+							<span class="text-danger" ng-if="postForm.telephone.$invalid && postForm.telephone.$dirty">
 								<p ng-if="postForm.telephone.$error.required">{{edit.lang.enter_phone}}</p>
 							</span>
 						</div>
@@ -79,7 +77,7 @@
 						<div class="col-md-4">
 							<label for="">Email</label>
 							<input type="text" name="email" ng-pattern="/^[a-zA-Z][-.\w]+\@[-\w]+(?:\.[a-z]+)?\.[a-z]{2,}/" required class="form-control" id="" ng-model="edit.profile.mail" placeholder="Email">
-							<span class="text-danger" ng-if="postForm.email.$invalid && postForm.$submitted">
+							<span class="text-danger" ng-if="postForm.email.$invalid && postForm.email.$dirty">
 								<p ng-if="postForm.email.$error.pattern">{{edit.lang.invalid_email}}</p>
 								<p ng-if="postForm.email.$error.required">{{edit.lang.enter_email}}</p>
 							</span>
@@ -89,23 +87,34 @@
 							<md-datepicker   ng-model="edit.profile.execution_time" md-placeholder="Enter date"></md-datepicker>
 						</div>
 						<div class="col-md-4">
-							<label for="">Arbeitsaufwand</label>
+							<label for="" style="width:100%">Arbeitsaufwand</label>
               <!-- <input type="text" name="name" ng-model="edit.profile.time_to_finish"> -->
+							<input type="number" style="display:inline-block; width:50%" name="number" ng-model="edit.profile.time_to_finish" class="form-control" id="" placeholder="Arbeitsaufwand" min="1" max="365">
+              <span ng-if="edit.profile.time_to_finish" style="display:inline-block;">
+                <p ng-if="edit.profile.time_to_finish == 1">
+                  Tag
+                </p>
+                <p ng-if="edit.profile.time_to_finish > 1">
+                  Tags
+                </p>
+              </span>
 
-							<input type="text" ng-model="edit.profile.time_to_finish" class="form-control" id="" placeholder="Arbeitsaufwand">
+              <span class="text-danger" ng-if="postForm.number.$invalid && postForm.number.$dirty">
+								<p ng-if="postForm.number.$error.max">Bitte eine Zahl zwischen 1 - 365 eingeben</p>
+								<p ng-if="postForm.number.$error.min">Bitte eine Zahl zwischen 1 - 365 eingeben</p>
+                <p ng-if="postForm.number.$error.number">Nur Zahlen in diesem Feld erlaubt</p>
+							</span>
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-md-4">
 							<label for="">Zuständigkeit</label>
-              <select class="form-control" name="" ng-options="user.name as user.name for user in edit.users" ng-model="edit.profile.worker">
-                <option value="">Select</option>
+              <select class="form-control" name="" ng-options="user.name as user.name for user in edit.users track by $index" ng-model="edit.profile.worker">
               </select>
             </div>
 						<div class="col-md-4">
 							<label for="">Wiederholen</label>
-							<select class="form-control" name=""  ng-options="rep.name as rep.name for rep in edit.type" ng-model="edit.profile.repeat">
-								<option value="">Select</option>
+							<select class="form-control" name=""  ng-options="rep.name as rep.name for rep in edit.type track by $index" ng-model="edit.profile.repeat">
 							</select>
 						</div>
 						<!-- <div class="col-md-4">
@@ -125,8 +134,14 @@
 						<div class="col-md-6">
 							<label for="">&nbsp;</label>
 							<div map-lazy-load="https://maps.google.com/maps/api/js">
-							  <ng-map center="{{edit.profile.address}}" zoom="13" >
-
+							  <ng-map center="{{edit.profile.address + ' ' + edit.profile.postal_code + ' ' + edit.profile.city}}" zoom="13" >
+                  <directions
+          draggable="true"
+          panel="directions-panel"
+          travel-mode="DRIVING"
+          origin="{{edit.profile.address + ' ' + edit.profile.postal_code + ' ' + edit.profile.city}}"
+        >
+        </directions>
 								</ng-map>
 							</div>
 
