--- a/src/app/gardenMaintenence/gardenChange.html
+++ b/src/app/gardenMaintenence/gardenChange.html
@@ -12,9 +12,9 @@
     <div class="row">
       <div class="menu col-md-12">
         <ul>
-          <li class="col-md-4"><a href="index.html"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
           <li class="col-md-4 title"><strong>Gartenunterhalt</strong></li>
-          <li class="col-md-4"><a href="erledigte.html">Erledigte</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a href="erledigte.html">Erledigte</a></li>
         </ul>
       </div>
     </div>
