--- a/src/app/gardenMaintenence/gardenMaintenence.html
+++ b/src/app/gardenMaintenence/gardenMaintenence.html
@@ -12,10 +12,10 @@
     <div class="row">
       <div class="menu col-md-12">
         <ul>
-          <li class="col-md-4"><a onClick="window.history.go(-1); return false;"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a onClick="window.history.go(-1); return false;"><i class="fa fa-angle-left"></i> Zurück</a></li>
           <li class="col-md-4 title" ng-if="vm.state=='gartenunterhalt'"><strong>Gartenunterhalt</strong></li>
           <li class="col-md-4 title" ng-if="vm.state=='gartenumaenderung'"><strong>Gartenumänderung</strong></li>
-          <li class="col-md-4"><a ng-click="vm.goDone()">Erledigte</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a ng-click="vm.goDone()">Erledigte</a></li>
         </ul>
       </div>
     </div>
