--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -9,9 +9,9 @@
 			<div class="row">
 				<div class="home-button col-md-12">
 					<ul class="row">
-						<li class="col-md-4"><a class="btn btn-home" ng-click="main.trigger('gartenunterhalt')">Gartenunterhalt</a></li>
-						<li class="col-md-4"><a class="btn btn-home" ng-click="main.trigger('gartenumaenderung')">Gartenumänderung</a></li>
-						<li class="col-md-4"><a class="btn btn-home" ng-click="main.goToReminder()">Erinnerung</a></li>
+						<li class="col-md-4" style="cursor:pointer"><a class="btn btn-home" ng-click="main.trigger('gartenunterhalt')">Gartenunterhalt</a></li>
+						<li class="col-md-4" style="cursor:pointer"><a class="btn btn-home" ng-click="main.trigger('gartenumaenderung')">Gartenumänderung</a></li>
+						<li class="col-md-4" style="cursor:pointer"><a class="btn btn-home" ng-click="main.goToReminder()">Erinnerung</a></li>
 					</ul>
 				</div>
 			</div>
