--- a/src/app/reminder/done.html
+++ b/src/app/reminder/done.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="menu col-md-12">
         <ul>
-          <li class="col-md-4"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
           <li class="col-md-4 title"><strong>Erinnerung</strong></li>
 
         </ul>
