--- a/src/app/reminder/reminder.html
+++ b/src/app/reminder/reminder.html
@@ -12,9 +12,9 @@
     <div class="row">
       <div class="menu col-md-12">
         <ul>
-          <li class="col-md-4"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a href="/"><i class="fa fa-angle-left"></i> Zurück</a></li>
           <li class="col-md-4 title"><strong>Erinnerung</strong></li>
-          <li class="col-md-4"><a ng-click="remind.goToDone()">Erledigte</a></li>
+          <li class="col-md-4" style="cursor:pointer"><a ng-click="remind.goToDone()">Erledigte</a></li>
         </ul>
       </div>
     </div>
