--- a/src/app/edit/edit.html
+++ b/src/app/edit/edit.html
@@ -27,8 +27,9 @@
 					<div class="form-group">
 						<div class="col-md-4" >
 							<label for="">Name</label>
-							<input type="text" name="lastName" class="form-control" ng-model="edit.profile.lastname" placeholder="Name" required  ng-maxlength="20">
-							<span class="text-danger" ng-if="postForm.lastName.$invalid && postForm.lastName.$dirty">
+							<input type="text" name="lastName" class="form-control" ng-model="edit.profile.lastname" placeholder="Name" required ng-minlength="2"  ng-maxlength="20">
+							<span class="text-danger" ng-if="postForm.lastName.$invalid && (postForm.lastName.$dirty || postForm.$submitted)">
+                <p ng-if="postForm.lastName.$error.minlength">{{edit.lang.less_character}}</p>
 								<p ng-if="postForm.lastName.$error.required">{{edit.lang.enter_name}}</p>
 								<p ng-if="postForm.lastName.$error.maxlength">{{edit.lang.more_character}}</p>
 							</span>
@@ -36,7 +37,7 @@
 						<div class="col-md-4">
 							<label for="">Vorname</label>
 							<input type="text" name="firstName" class="form-control" id="" ng-model="edit.profile.firstname" placeholder="Vorname" required  ng-maxlength="20">
-							<span class="text-danger" ng-if="postForm.firstName.$invalid && postForm.firstName.$dirty">
+							<span class="text-danger" ng-if="postForm.firstName.$invalid && (postForm.firstName.$dirty || postForm.$submitted)">
 								<p ng-if="postForm.firstName.$error.required">{{edit.lang.enter_first}}</p>
 								<p ng-if="postForm.firstName.$error.maxlength">{{edit.lang.more_character}}</p>
 							</span>
@@ -44,7 +45,7 @@
 						<div class="col-md-4">
 							<label for="">Adresse</label>
 							<input type="text" class="form-control" name="address" required id="" ng-model="edit.profile.address" placeholder="Adresse">
-							<span class="text-danger" ng-if="postForm.address.$invalid && postForm.address.$dirty">
+							<span class="text-danger" ng-if="postForm.address.$invalid && (postForm.address.$dirty|| postForm.$submitted)">
 								<p ng-if="postForm.address.$error.required">{{edit.lang.enter_address}}</p>
 							</span>
 						</div>
@@ -53,7 +54,7 @@
 						<div class="col-md-4">
 							<label for="">Postleitzahl</label>
 							<input type="text" ng-model="edit.profile.postal_code" required name="postal_code" ng-pattern="/^\d+$/" class="form-control" id="" placeholder="Postleitzahl">
-							<span class="text-danger" ng-if="postForm.postal_code.$invalid && postForm.postal_code.$dirty">
+							<span class="text-danger" ng-if="postForm.postal_code.$invalid && (postForm.postal_code.$dirty || postForm.$submitted)">
 								<p ng-if="postForm.postal_code.$error.pattern">{{edit.lang.invalid_postal}}</p>
 								<p ng-if="postForm.postal_code.$error.required">{{edit.lang.enter_postal}}</p>
 							</span>
@@ -61,14 +62,14 @@
 						<div class="col-md-4">
 							<label for="">Ort</label>
 							<input type="text" name="place" class="form-control" ng-model="edit.profile.place" id="" placeholder="Ort" ng-maxlength="20">
-							<span class="text-danger" ng-if="postForm.place.$invalid && postForm.place.$dirty">
+							<span class="text-danger" ng-if="postForm.place.$invalid && (postForm.place.$dirty || postForm.$submitted)">
 								<p ng-if="postForm.place.$error.maxlength">{{edit.lang.more_character}}</p>
 							</span>
 						</div>
 						<div class="col-md-4">
 							<label for="">Telefon <img src="assets/images/icon-phone.png"></label>
 							<input type="text" name="telephone" class="form-control"  required id="" ng-model="edit.profile.phone" placeholder="Telefon">
-							<span class="text-danger" ng-if="postForm.telephone.$invalid && postForm.telephone.$dirty">
+							<span class="text-danger" ng-if="postForm.telephone.$invalid && (postForm.telephone.$dirty || postForm.$submitted)">
 								<p ng-if="postForm.telephone.$error.required">{{edit.lang.enter_phone}}</p>
 							</span>
 						</div>
@@ -77,7 +78,7 @@
 						<div class="col-md-4">
 							<label for="">Email</label>
 							<input type="text" name="email" ng-pattern="/^[a-zA-Z][-.\w]+\@[-\w]+(?:\.[a-z]+)?\.[a-z]{2,}/" required class="form-control" id="" ng-model="edit.profile.mail" placeholder="Email">
-							<span class="text-danger" ng-if="postForm.email.$invalid && postForm.email.$dirty">
+							<span class="text-danger" ng-if="postForm.email.$invalid && (postForm.email.$dirty || postForm.$submitted)">
 								<p ng-if="postForm.email.$error.pattern">{{edit.lang.invalid_email}}</p>
 								<p ng-if="postForm.email.$error.required">{{edit.lang.enter_email}}</p>
 							</span>
@@ -95,11 +96,11 @@
                   Tag
                 </p>
                 <p ng-if="edit.profile.time_to_finish > 1">
-                  Tags
+                  Tage
                 </p>
               </span>
 
-              <span class="text-danger" ng-if="postForm.number.$invalid && postForm.number.$dirty">
+              <span class="text-danger" ng-if="postForm.number.$invalid && (postForm.number.$dirty || postForm.$submitted)">
 								<p ng-if="postForm.number.$error.max">Bitte eine Zahl zwischen 1 - 365 eingeben</p>
 								<p ng-if="postForm.number.$error.min">Bitte eine Zahl zwischen 1 - 365 eingeben</p>
                 <p ng-if="postForm.number.$error.number">Nur Zahlen in diesem Feld erlaubt</p>
