--- a/src/app/gardenMaintenence/gardenMaintenence.html
+++ b/src/app/gardenMaintenence/gardenMaintenence.html
@@ -33,9 +33,9 @@
       <!-- <input type="checkbox" ng-model="selection"     radio-beautify id="maintenance" value="test"> -->
       <!-- <div class="post-title col-md-12"><h3>Gartenunterhalt</h3></div>				 -->
       <form class="form-gardenmaintenance">
-        <div class="form-group" ng-repeat="list in vm.lists track by $index" infinite-scroll="vm.getList()"  infinite-scroll-distance="3">
+        <div class="form-group" ng-repeat="list in vm.lists track by $index" infinite-scroll="vm.getList()"  infinite-scroll-distance="3" ng-if="list.status=='0'">
           <div class="post-icons col-md-1 col-sm-1 col-xs-2">
-            <input type="checkbox" ng-model="selection" ng-checked="list.status==1"   radio-beautify="list" data="vm.lists" id="maintenance" value="{{list}}">
+            <input type="checkbox" ng-model="selection" name="checkbox"    radio-beautify="list" data="vm.lists" id="maintenance" value="{{list}}">
           </div>
           <div class="col-md-10 col-sm-10 col-xs-8">
             <textarea name="maintenancedetails" disabled id="maintenancedetails" class="form-control" disabled="disabled">{{list.firstname + ' ' + list.lastname + ',' + list.address}}</textarea>
