--- a/src/app/edit/edit.html
+++ b/src/app/edit/edit.html
@@ -152,7 +152,7 @@
 
 					<div class="form-group">
 
-						<div class="col-md-10">
+						<div class="col-md-8">
 							<div class="post-upload" ngf-select="edit.upload($file)" ng-model="vm.file" style="cursor:pointer">
 								<span ngf-drop="edit.upload($file)">Drag and Drop Files</span>
 								<i class="fa fa-upload"></i>
@@ -161,16 +161,12 @@
 						</div>
             <div class="col-md-2">
 							<div class="" style="position:relative;display:inline-block">
-								<img ngf-thumbnail="vm.file || 'http://www.instagramprivate.gamersden.org/img/icon-user-default.png'" class="img-responsive">
-								<div class="close" style="position:absolute;right:0px;top:0px;z-index:10;cursor:pointer" ng-click="$file=null;vm.file='http://www.instagramprivate.gamersden.org/img/icon-user-default.png'">
+								<img ngf-thumbnail="vm.file" class="img-responsive">
+								<div class="close" style="position:absolute;right:0px;top:0px;z-index:10;cursor:pointer" ng-click="$file=null" ng-if="vm.file">
 									X
 								</div>
 							</div>
-							<!-- <label for="">Choose Upload Type:</label>
-							  {{edit.fileType}}
-							<div class="checkbox"><label><input type="checkbox" name="image" ng-model="edit.fileType" ng-value="image"><span>Fotos</span></label></div>
-							<div class="checkbox"><label><input type="checkbox" name="video" ng-model="edit.fileType" ng-value="video"><span>Dateien</span></label></div>
-							<div class="checkbox"><label><input type="checkbox" name="voice" ng-model="edit.fileType" ng-value="voice"><span>Sprachmemo</span></label></div> -->
+
 						</div>
 
 					</div>
