--- a/src/app/reminder/done.html
+++ b/src/app/reminder/done.html
@@ -30,7 +30,7 @@
     <div class="row">
       <!-- <div class="post-title col-md-12"><h3>Gartenunterhalt</h3></div>				 -->
       <form class="form-erinnerung">
-        <div class="form-group" ng-repeat="(key, list) in done.lists" infinite-scroll="done.getList()" infinite-scroll-distance="3">
+        <div class="form-group" ng-repeat="(key, list) in done.lists | unique: 'id'">
           <div class="post-icons col-md-1 col-sm-1 col-xs-2">
             <input type="checkbox" name="maintenance" disabled id="maintenance" radio-check="list" ng-checked="list.status==1" data="done.lists" value="{{list}}" >
           </div>
